--- a/blocks/card.css
+++ b/blocks/card.css
@@ -29,6 +29,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    margin-bottom: 0px;
 
     font-family: "Inter", sans-serif;
     font-style: normal;
@@ -45,6 +46,6 @@
 }
 
 .card__like-button:hover {
-    background: transparent url(../images/like-hover.svg) center no-repeat;
+    opacity: 0.6;
   }
   
