--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,22 +1,21 @@
 .header {
-    margin-top: 45px;
-    padding-bottom: 41px;
-    border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+  margin-top: 45px;
+  padding-bottom: 41px;
+  border-bottom: 1px solid rgb(84, 84, 84, 0.7);
+}
+
+@media screen and (max-width: 480px) {
+  .header {
+    padding-top: 28px;
+    width: 100%;
+    padding-bottom: 32px;
+    max-width: 100%;
+    margin: 0;
   }
 
   .header__logo {
-    width: 173px;
-    height: 33px;
+    width: 126px;
+    height: 24px;
+    margin-left: 27px;
   }
-
-
-  @media screen and (max-width: 320px) {
-    .header{
-      margin-bottom: 41px;
-    }
-
-    .header__logo {
-      width: 126px;
-      height: 24px;
-    }
-  }
+}
