--- a/blocks/card.css
+++ b/blocks/card.css
@@ -29,7 +29,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
-    margin-bottom: 0px;
+    margin: 0px;
 
     font-family: "Inter", sans-serif;
     font-style: normal;
@@ -46,7 +46,7 @@
 }
 
 .card__like-button:hover {
-    opacity: 0.6;
+    opacity: 0.5;
     cursor: pointer;
   }
   
