--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -1,28 +1,31 @@
+.footer {
+  max-width: 880px;
+  width: 100%;
+  position: relative;
+  margin: 67px auto 60px;
+}
+
+.footer__content {
+  margin: 0;
+  width: 318px;
+
+  font-family: "Inter", Arial, sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+
+  color: #545454;
+}
+
+@media screen and (max-width: 480px) {
   .footer {
-    max-width: 880px;
-    width: calc(100% - 38px);
-    margin: 67px auto 0;
-    padding-bottom: 60px;
-    color: #545454;
-  }
-  
-  .footer__copyright {
-    margin: 0;
-    padding: 0;
-
-    font-family: "Inter", Arial, sans-serif;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 21px;
+    margin: 48px 20px 36px;
+    max-width: calc(100% - 40px);
   }
 
-  @media screen and (min-width: 320px) and (max-width: 664px) {
-    .footer {
-      font-size: 14px;
-      padding-left: 19px;
-      padding-top: 48px;
-      padding-bottom: 36px;
-      margin: 0;
-      width: 282px;
-    }
+  .footer__content {
+    width: 282px;
+    font-size: 14px;
+    line-height: 17px;
   }
+}
