--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -14,16 +14,17 @@
 }
 
 .modal__input {
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
   width: 100%;
   line-height: 17px;
   color: #000000;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   box-sizing: border-box;
+
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
 }
 
 .modal__input:not(:last-of-type) {
@@ -35,16 +36,17 @@
 }
 
 .modal__title {
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 900;
-  font-size: 24px;
-  line-height: 29px;
   padding-right: 64px;
   margin: 0;
   display: flex;
   align-items: center;
   box-sizing: border-box;
+
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 29px;
 }
 
 .modal__container {
@@ -59,11 +61,8 @@
 }
 
 .modal__close {
-  background-image: url(../image/close.svg);
-  border: none;
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-color: transparent;
+  background: url(../images/close-icon.svg) no-repeat transparent center;
+  border: 0px;
   cursor: pointer;
   position: absolute;
   bottom: calc(100% + 5px);
@@ -79,25 +78,11 @@
 }
 
 .modal__form {
-  /* display: flex;
-  flex-direction: column; */
   margin-top: 54px;
   width: 358px;
-  /* height: 330px; */
 }
-/* @media screen and(max-width: 550px) {
-    .modal__form {
-        width: 100%;
-        height: 322px;
-    }
-} */
 
 .modal__button {
-  font-family: "Inter", Arial, sans-serif;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 22px;
-  font-style: normal;
   color: white;
   margin: 0;
   margin-top: 48px;
@@ -109,6 +94,12 @@
   padding: 10px 15px;
   cursor: pointer;
   transition: 0.2s ease-in-out;
+
+  font-family: "Inter", Arial, sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  font-style: normal;
 }
 
 .modal__button:hover {
@@ -132,13 +123,11 @@
     top: -45px;
   }
   .modal__button {
-    /* width: 100%; */
     margin-top: 45px;
     font-size: 14px;
     line-height: 16.94px;
   }
   .modal__form {
-    /* width: 100%; */
     font-size: 14px;
     line-height: 17px;
   }
