--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,53 +1,75 @@
 .card {
-    display: flex;
-    flex-direction: column;
-    list-style: none;
+  position: relative;
 
-    border-radius: 10px;
-    overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+  border-radius: 10px;
+  overflow: hidden;
 }
 
 .card__image {
-    width: 282px;
-    height: 282px;
-    border-radius: 10px;    
+  width: 282px;
+  height: 282px;
+  border-radius: 10px;  
 }
 
 .card__description {
-    display: flex;
-    background-color: white;
-    color: black;
-    padding-top: 25px;
-    padding-bottom: 25px;
-    padding-left: 20px;
-    padding-right: 20px;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  background-color: white;
+  color: black;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  padding-left: 20px;
+  padding-right: 20px;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .card__title {
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-    margin: 0px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  margin: 0px;
 
-    font-family: "Inter", sans-serif;
-    font-style: normal;
-    font-size: 24px;
-    font-weight: 900;
-    line-height: 29px;
+  font-family: "Inter", sans-serif;
+  font-style: normal;
+  font-size: 24px;
+  font-weight: 900;
+  line-height: 29px;
 }
 
 .card__like-button {
-    background: transparent url(../images/like.svg) center no-repeat;
-    width: 21px;
-    height: 18px;
-    border-style: none;
-    transition: opacity 0.5s ease;
+  background: transparent url(../images/like-inactive.svg) center no-repeat;
+  width: 21px;
+  height: 18px;
+  border: none;
+  transition: opacity 0.5s ease;
 }
 
 .card__like-button:hover {
-    opacity: 0.5;
-    cursor: pointer;
-  }
-  
+  opacity: 0.5;
+  cursor: pointer;
+}
+
+.card__like-button_active {
+  background-image: url(../images/like-active.svg);
+}
+
+.card__delete-icon {
+  position: absolute;
+  top: 18px;
+  right: 15px;
+
+  background: transparent url(../images/delete-icon.svg) center no-repeat;
+  width: 18px;
+  height: 19px;
+  border: none;
+  transition: opacity 0.5s ease;
+
+}
+
+.card__delete-icon:hover {
+  opacity: 0.5;
+  cursor: pointer;
+}
