--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,12 +1,13 @@
 .cards {
-    margin-top: 30px;
+  margin-top: 47px;
 }
 
 .cards__list {
-    display: grid;
-    justify-content: center;
-    grid-template-columns: repeat(auto-fit, 282px);
-    grid-gap: 20px 17px;
-    padding: 0px;
-    margin: 0px;
+  display: grid;
+  list-style-type: none;
+  grid-template-columns: repeat(auto-fit, 282px);
+  grid-gap: 20px 17px;
+  padding: 0;
+  margin: 0;
+  justify-content: center;
 }
