--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -1,11 +1,13 @@
 .modal {
-  display: none;
   position: fixed;
-  background-color: rgba(0, 0, 0, 0.5);
   top: 0px;
   left: 0px;
+
   width: 100%;
   height: 100%;
+  display: none;
+  background-color: rgba(0, 0, 0, 0.5);
+
 }
 
 .modal_opened {
@@ -13,6 +15,8 @@
   justify-content: center;
   align-items: flex-start;
   padding-top: 195px;
+
+  transition: visibility 0s 0.5s, opacity 0.5s;
 }
 
 .modal__container {
@@ -29,11 +33,22 @@
   position: absolute;
   top: -45px;
   right: -45px;
+
+  transition: visibility 0s 0.5s, opacity 0.5s;
 }
 
 .modal__close:hover {
   cursor: pointer;
   opacity: 0.6;
+}
+
+.modal__form {
+  box-sizing: border-box;
+  padding: 36px;
+
+  background: #ffffff;
+  font-family: "Inter", sans-serif;
+  border-radius: 10px;
 }
 
 .modal__title {
@@ -47,16 +62,6 @@
   font-size: 24px;
   line-height: 29px;
 }
-
-.modal__form {
-  box-sizing: border-box;
-  padding: 36px;
-
-  background: #ffffff;
-  font-family: "Inter", sans-serif;
-  border-radius: 10px;
-}
-
 
 .modal__input {
   min-width: 358px;
@@ -91,10 +96,30 @@
   opacity: 0.5;
 }
 
+.modal__preview {
+  position: absolute;
+  top: 90px;
+  margin: 0 auto;
+}
 
+.modal__preview-image {
+  max-width: 75vw;
+  max-height: 75vh;
+}
+
+.modal__preview-caption {
+  max-width: 330px;
+  margin: 0;
+
+  font-family: "Inter", Arial, sans-serif;
+  font-size: 12px;
+  line-height: 1.2;
+  font-weight: 400;
+
+  color: #ffffff;
+}
 
 @media screen and (max-width: 520px) {
-
   .modal_opened {
     padding-top: 123px;
   }
@@ -107,11 +132,12 @@
   }
 
   .modal__close {
-    width: 26px;
-    height: 26px;
     position: absolute;
     top: -45px;
     right: 20px;
+
+    width: 26px;
+    height: 26px;
   }
 
   .modal__form {
@@ -135,6 +161,7 @@
     margin-top: 48px;
     padding: 0;
     font-size: 14px;
-  line-height: 16px;
+    line-height: 16px;
   }
+
 }
