--- a/blocks/card.css
+++ b/blocks/card.css
@@ -14,6 +14,10 @@
   border-radius: 10px;  
 }
 
+.card__image:hover {
+  cursor: pointer;
+}
+
 .card__description {
   display: flex;
   background-color: white;
