--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -26,6 +26,7 @@
 
 }
 
+
 .modal_opened {
    visibility: visible; /* visible */
    opacity: 1; /* opacity has numeric value, so we can animate it */
@@ -100,6 +101,17 @@
   margin: 0 0 30px;
 }
 
+/* Added for project 6 step 1 and step 2 */
+.modal__error {
+  position: relative;
+  color: red;
+
+  font-family: "inter", sans-serif;
+  font-size: 12px;
+  line-height: 14px;
+  display: block;
+}
+
 .modal__button {
   width: 100%;
   min-height: 50px;
@@ -116,6 +128,20 @@
 .modal__button:hover {
   cursor: pointer;
   opacity: 0.5;
+}
+
+/* Added for Project 6 step 1 and step 2 */
+.modal__button_disabled {
+  background-color: #ffffff;
+  border-color: rgba(0, 0, 0, 0.2);
+  color: rgba(0, 0, 0, 0.2);
+  border: solid 1px;
+  cursor: default;
+}
+
+/* Added for Project 6 step 1 and step 2 */
+.modal__button_disabled:hover {
+  opacity: 1;
 }
 
 .modal__preview {
