--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -97,6 +97,11 @@
   margin: 0 0 20px;
 }
 
+/* Added for project 6 */
+.modal__input_type_error {
+  border-bottom: 1px solid red;
+}
+
 .modal__input:not(:last-of-type) {
   margin: 0 0 30px;
 }
@@ -105,6 +110,7 @@
 .modal__error {
   position: relative;
   color: red;
+
   font-family: "Inter", normal;
   font-size: 12px;
   line-height: 14px;
@@ -134,12 +140,12 @@
   opacity: 0.2;
   background-color: #ffffff;
   color: #000000;
-  border: 1px solid red;
 }
 
 /* Added for Project 6 step 1 and step 2 */
 .modal__button_disabled:hover {
-  opacity: 1;
+  cursor: default;
+  opacity: 0.2;
 }
 
 .modal__preview {
