--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -100,10 +100,11 @@
   /* margin: 0 0 20px; */
 }
 
-/* Added for project 6 */
-.modal__input_type_error {
+
+/* Rsemoved for project 7.  Added for project 6 */
+/* .modal__input-error {
   border-bottom: 1px solid red;
-}
+} */
 
 /* .modal__input:not(:last-of-type) {
   margin: 0 0 30px;
@@ -113,7 +114,7 @@
 .modal__error {
   /* position: relative; */
   color: red;
-
+  border-top: 1px solid red;
   font-family: "Inter", normal;
   font-size: 12px;
   line-height: 14px;
@@ -138,21 +139,25 @@
   opacity: 0.5;
 }
 
-/* Added for Project 6 step 1 and step 2 */
-.modal__button:disabled {
-  /* project 6 review 3 feedback - border is grey*/
+.modal__button_disabled {
   border: 1px solid grey;
   background-color: #ffffff;
   color: #000000;
   opacity: 0.2;
 }
 
-.modal__button_disabled {
-  border: red solid 10px;
-  opacity: 0.2;
+/* Removed in Project 7 - Handled by FormValidator.js */
+/* Added for Project 6 step 1 and step 2 */
+/* project 6 review 3 feedback - border is grey*/
+/*
+.modal__button:disabled {
+
+  border: 1px solid grey;
   background-color: #ffffff;
   color: #000000;
+  opacity: 0.2;
 }
+*/
 
 /* Added for Project 6 step 1 and step 2 */
 .modal__button_disabled:hover {
